force-app/main/default/objects/AI_Discount_Rule__c/AI_Discount_Rule__c.object-meta.xml
<CustomObject>
    <description>Defines discount policies including limits, calculation methods, stackability, and whether approval is required. Applied after pricing rules establish base price.</description>
    <label>AI Discount Rule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AI Discount Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>