force-app/main/default/objects/AI_Discount_Rule__c/fields/Approval_Required_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Approval_Required_Threshold__c</fullName>
    <description>Discount percentage at or above which approval is automatically required.</description>
    <label>Approval Required Threshold %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>