force-app/main/default/objects/AI_Discount_Rule__c/fields/Condition_Text__c.field-meta.xml
<CustomField>
    <fullName>Condition_Text__c</fullName>
    <description>Structured natural language defining when this discount rule applies. Example: WHEN {Account.Lifetime_Value__c} > 500000 AND {Account.Type} = 'Enterprise'</description>
    <label>Condition Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>