force-app/main/default/objects/AI_Discount_Rule__c/fields/Discount_Type__c.field-meta.xml
<CustomField>
    <fullName>Discount_Type__c</fullName>
    <label>Discount Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Percentage</fullName><default>true</default><label>Percentage</label></value>
            <value><fullName>Fixed Amount</fullName><default>false</default><label>Fixed Amount</label></value>
            <value><fullName>Tiered Percentage</fullName><default>false</default><label>Tiered Percentage</label></value>
            <value><fullName>Override Price</fullName><default>false</default><label>Override Price</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>