force-app/main/default/objects/AI_Discount_Rule__c/fields/Discount_Value__c.field-meta.xml
<CustomField>
    <fullName>Discount_Value__c</fullName>
    <description>The discount value. Percentage points for Percentage types, currency amount for Fixed Amount.</description>
    <label>Discount Value</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>