force-app/main/default/objects/AI_Discount_Rule__c/fields/Max_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Max_Discount_Percent__c</fullName>
    <description>Maximum allowed discount percentage. AI engine will flag or block discounts exceeding this value.</description>
    <label>Max Discount %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>