force-app/main/default/objects/AI_Discount_Rule__c/fields/Stackable__c.field-meta.xml
<CustomField>
    <fullName>Stackable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, this discount can be combined with other active discounts. When false, only the highest single discount applies.</description>
    <label>Stackable</label>
    <type>Checkbox</type>
</CustomField>